--- a/SerilogLogContextProperty/SerilogLogContextProperty.csproj
+++ b/SerilogLogContextProperty/SerilogLogContextProperty.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="Serilog" Version="2.12.0" />
   </ItemGroup>
 
